--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     html, body { margin: 0; padding: 0; }
     select { width: 100px; display: block; top: 50%; margin-top: -15px; }
     .select-switch, select { position: relative; margin: 0 auto; top: 50%; margin-top: -15px; }
+    footer { position: fixed; bottom: 0; width: 100%; text-align: center; }
+    footer small{ margin-top: 70px; margin-bottom: 70px; font-size: .9em; display: block; font-family: monospace; text-align: center; color: hsl(0, 0%, 40%); }
+    footer small a{ text-decoration: none; font-weight: bold; color: hsl(0, 0%, 20%); }
 </style>
 
 <script src="build/build.js"></script>
@@ -13,6 +16,10 @@
     <option value="2">Draft</option>
     <option value="3">Scheduled</option>
 </select>
+
+<footer>
+  <small>by <a href="http://mnmly.com" target="_blank">mnmly</a> / grab it on <a href="http://github.com/mnmly/select-switch/">github</a></small>
+</footer>
 
 
 <script type="text/javascript" charset="utf-8">
