use jquery to retrieve label

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="build/build.css" type="text/css" media="screen" charset="utf-8">
 <style type="text/css" media="screen">
-    html, body { margin: 0; padding: 0; }
+    html, body { margin: 0; padding: 0; height: 100%; }
     select { width: 100px; display: block; top: 50%; margin-top: -15px; }
     .select-switch, select { position: relative; margin: 0 auto; top: 50%; margin-top: -15px; }
     footer { position: fixed; bottom: 0; width: 100%; text-align: center; }
