--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width;  minimum-scale=1.0, maximum-scale=1.0;">
+
 <link rel="stylesheet" href="build/build.css" type="text/css" media="screen" charset="utf-8">
 <style type="text/css" media="screen">
     html, body { margin: 0; padding: 0; height: 100%; }
