meta value syntax fix

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta name="viewport" content="width=device-width;  minimum-scale=1.0, maximum-scale=1.0;">
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0;">
 
 <link rel="stylesheet" href="build/build.css" type="text/css" media="screen" charset="utf-8">
 <style type="text/css" media="screen">
