Remove unnecessary style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <style type="text/css" media="screen">
     html, body { margin: 0; padding: 0; height: 100%; }
     select { width: 100px; display: block; top: 50%; margin-top: -15px; }
-    .select-switch, select { position: relative; margin: 0 auto; top: 50%; margin-top: -15px; }
+    .select-switch, select { position: relative; margin: 0 auto; top: 50%; margin-top: -15px;  font-size: 12px; }
+    .select-switch{ font-family: "Consolas", monospace;  border: 2px solid #000; text-transform: uppercase; }
     footer { position: absolute; bottom: 0; width: 100%; text-align: center; }
     footer small{ margin-top: 70px; margin-bottom: 70px; font-size: .9em; display: block; font-family: monospace; text-align: center; color: hsl(0, 0%, 40%); }
     footer small a{ text-decoration: none; font-weight: bold; color: hsl(0, 0%, 20%); }
